--- a/package.json
+++ b/package.json
@@ -13,8 +13,12 @@
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
+    "react-geocode": "^0.2.3",
+    "react-google-maps": "^9.4.5",
+    "react-notifications-component": "^3.0.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-scroll": "^1.8.1",
     "react-validation": "^3.0.7",
     "validator": "^13.5.2",
     "web-vitals": "^0.2.4"
