--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
+    "react-dropzone": "^11.3.1",
     "react-geocode": "^0.2.3",
     "react-google-maps": "^9.4.5",
     "react-notifications-component": "^3.0.3",
